--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tanzeela Farooq | Portfolio</title>
+
+ 
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+
+    <!-- AOS CSS -->
+    <link
+      href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
+
     <nav id="navbar">
       <h2 class="logo">Tanzeela Farooq</h2>
-      <ul>
+
+      <div class="menu-toggle" id="menuToggle">☰</div>
+
+      <ul id="navLinks">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
@@ -17,112 +37,164 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+
+      <button id="darkModeToggle" aria-label="Toggle dark mode">🌙</button>
     </nav>
-    <section id="home" class="hero">
+    <section id="home" class="hero" data-aos="fade-up">
       <img src="./portfolio.jpg" alt="Profile Photo" class="profile-img" />
       <h1>Hi, I'm <span>Tanzeela Farooq</span></h1>
       <p>Web Developer | Front-End Developer | Learner</p>
-       <a href="#projects" class="btn">View My Work</a>
+      <a href="#projects" class="btn">View My Work</a>
     </section>
-
-    <section id="about">
+    <section id="about" data-aos="fade-right">
       <h2>About Me</h2>
       <p>
-  MCA graduate upskilling in Full Stack Development 
-  with a strong focus on building clean, responsive,
-   and user-friendly web applications. Proficient in HTML, CSS, JavaScript, and React.js, with foundational backend knowledge of Node.js, Express.js, and MongoDB. I enjoy hands-on project development, writing clean code, and solving real-world problems while continuously improving my technical skills.er.
+        MCA graduate upskilling in Full Stack Development with a strong focus on
+        building clean, responsive, and user-friendly web applications.
+        Proficient in HTML, CSS, JavaScript, and React.js, with foundational
+        backend knowledge of Node.js, Express.js, and MongoDB. I enjoy hands-on
+        project development, writing clean code, and solving real-world problems
+        while continuously improving my technical skills.
       </p>
     </section>
-    <section id="skills">
-      <h2>Skills</h2>
+<section id="skills">
+  <h2 data-aos="fade-up">Skills</h2>
 
-      <div class="skills-container">
-        <div class="skill-box">
-          <h3>Frontend</h3>
-          <p>HTML, CSS, JavaScript, React.js, Tailwind CSS, TypeScript</p>
-        </div>
-
-        <div class="skill-box">
-          <h3>Backend (Basics)</h3>
-          <p>Node.js, Express.js, MongoDB</p>
-        </div>
-
-        <div class="skill-box">
-          <h3>Tools & Concepts</h3>
-          <p>Git, GitHub, Responsive Design, REST APIs, Postman</p>
-        </div>
+  <div class="skills-carousel-wrapper">
+    <button class="scroll-btn left-btn">&#10094;</button>
+    
+    <div class="skills-carousel" id="skillsCarousel">
+      <div class="skill-card" data-aos="zoom-in">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" class="skill-img" />
+        <h3>HTML5</h3>
+        <p>Markup language</p>
       </div>
-    </section>
-    <section id="certifications">
+
+      <div class="skill-card" data-aos="zoom-in" data-aos-delay="100">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" class="skill-img" />
+        <h3>CSS3</h3>
+        <p>Styling web pages</p>
+      </div>
+
+      <div class="skill-card" data-aos="zoom-in" data-aos-delay="200">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="skill-img" />
+        <h3>JavaScript</h3>
+        <p>Interactive scripts</p>
+      </div>
+
+      <div class="skill-card" data-aos="zoom-in" data-aos-delay="300">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React.js" class="skill-img" />
+        <h3>React.js</h3>
+        <p>Frontend library</p>
+      </div>
+
+      <div class="skill-card" data-aos="zoom-in" data-aos-delay="400">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js" class="skill-img" />
+        <h3>Node.js</h3>
+        <p>Backend basics</p>
+      </div>
+
+      <div class="skill-card" data-aos="zoom-in" data-aos-delay="500">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB" class="skill-img" />
+        <h3>MongoDB</h3>
+        <p>Database basics</p>
+      </div>
+    </div>
+
+    <button class="scroll-btn right-btn">&#10095;</button>
+  </div>
+</section>
+ 
+    <section id="tools" data-aos="fade-up">
+  <h2>Tools & Concepts</h2>
+  
+  <div class="tools-card" data-aos="zoom-in">
+    <div class="tool-icons">
+      <i class="fa-brands fa-git-alt"></i>
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-solid fa-mobile-screen"></i>
+      <i class="fa-solid fa-plug"></i>
+      <i class="fa-solid fa-database"></i>
+    </div>
+    <p>Git, GitHub, Responsive Design, REST APIs, Postman</p>
+  </div>
+</section>
+
+    <section id="certifications" data-aos="fade-up">
       <h2>Certifications</h2>
+
       <div class="cert-container">
-        <div class="cert-card">
+        <div class="cert-card" data-aos="fade-up">
           <h3>Full Stack Web Development</h3>
           <p>
-            MERN STACK :HTML, CSS, JavaScript, React.js, Node.js, Express.js,
+            MERN Stack: HTML, CSS, JavaScript, React.js, Node.js, Express.js,
             MongoDB
           </p>
           <span>Hiqmah</span>
         </div>
 
-        <div class="cert-card">
+        <div class="cert-card" data-aos="fade-up" data-aos-delay="150">
           <h3>Responsive Web Design</h3>
           <p>HTML5, CSS3, Flexbox, Grid</p>
           <span>FreeCodeCamp</span>
         </div>
-
       </div>
     </section>
-
-    <section id="projects">
+    <section id="projects" data-aos="fade-up">
       <h2>Projects</h2>
 
       <div class="project-container">
-        <div class="project-card">
-          <h3>Project One</h3>
-          <p>Pokemon-Finder</p>
-          <a href="https://github.com/tanzeela2-1/pokemon-finder" target="_blank"
+        <div class="project-card" data-aos="fade-up">
+          <h3>Pokemon Finder</h3>
+          <p>JavaScript based Pokemon search app</p>
+          <a
+            href="https://github.com/tanzeela2-1/pokemon-finder"
+            target="_blank"
             >View Code</a
           >
         </div>
 
-        <div class="project-card">
-          <h3>Project Two</h3>
-          <p>Todo-App</p>
-          <a href="https://github.com/tanzeela2-1/todo-js" target="_blank"
+        <div class="project-card" data-aos="fade-up" data-aos-delay="150">
+          <h3>Todo App</h3>
+          <p>Task management app using JavaScript</p>
+          <a
+            href="https://github.com/tanzeela2-1/todo-js"
+            target="_blank"
             >View Code</a
           >
         </div>
 
-        <div class="project-card">
-          <h3>Project Three</h3>
-          <p>Tic-Tac-Toe</p>
-          <a href="https://github.com/tanzeela2-1/tic-tac-toe-JS" target="_blank"
+        <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+          <h3>Tic Tac Toe</h3>
+          <p>Classic game built with JavaScript</p>
+          <a
+            href="https://github.com/tanzeela2-1/tic-tac-toe-JS"
+            target="_blank"
             >View Code</a
           >
         </div>
       </div>
     </section>
-
-    <section id="contact">
+    <section id="contact" data-aos="fade-up">
       <h2>Contact Me</h2>
-      <p>You can reach me here</p>
+      <p class="contact-text">You can reach me here</p>
 
       <div class="contact-links">
-        <a href="https://github.com/tanzeela2-1" target="_blank">GitHub</a>
-        <a
-          href="https://www.linkedin.com/in/tanzeela-farooq-9222993a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-          target="_blank"
-          >LinkedIn</a
+        <a href="https://github.com/tanzeela2-1" target="_blank"
+          ><i class="fa-brands fa-github"></i> GitHub</a
         >
-        <a href="mailto:sofitanu0786@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/tanzeela-farooq-9222993a2" target="_blank"
+          ><i class="fa-brands fa-linkedin"></i> LinkedIn</a
+        >
+        <a href="mailto:sofitanu0786@gmail.com"
+          ><i class="fa-solid fa-envelope"></i> Email</a
+        >
       </div>
     </section>
-
-    <footer>
+      <footer>
       <p>© 2025 Tanzeela Farooq</p>
     </footer>
-    <!-- 
-    <script src="./script.js"></script> -->
-  </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="script.js"></script>
+ </body>
 </html>
